[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/vox_gen/VoxGen.gd" type="Script" id=2]
[ext_resource path="res://addons/simple_fps_controller/Player.tscn" type="PackedScene" id=3]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )
spawn_buffer = 0.1

[node name="VoxGen" type="Spatial" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )
from = Vector3( -25, -25, -25 )
to = Vector3( 25, 25, 25 )
chunk_counts = Vector3( 12, 3, 12 )
surface_level = 0.5
voxel_size = 0.1
voxel_rate = 1e+06

[node name="Player" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
move_speed = 4
friction = 2.5

[node name="SpawnCast" type="RayCast" parent="."]
unique_name_in_owner = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.766044, -0.291819, 0.572728, 0, 0.891007, 0.453991, -0.642788, -0.347777, 0.682551, 0, 0.940165, 0 )
shadow_enabled = true
directional_shadow_blend_splits = true

[connection signal="initialized" from="VoxGen" to="." method="_on_VoxGen_initialized"]
